--- a/Cryptography/Cryptography/MainPage.xaml
+++ b/Cryptography/Cryptography/MainPage.xaml
@@ -13,8 +13,8 @@
         <Button x:Name="Atbash" Content="Atbash" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,587,0,-9" Width="205" Height="62"/>
         <Button x:Name="A1Z26" Content="A1Z26" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="205,587,0,-9" Width="195" Height="62"/>
         <Button x:Name="Vigenere" Content="Vigenere" HorizontalAlignment="Left" VerticalAlignment="Top" Margin="0,543,0,0" Width="205" Height="62"/>
-        <TextBlock x:Name="textBlock" HorizontalAlignment="Left" TextWrapping="Wrap" Text="TextBlock" VerticalAlignment="Top" Margin="0,182,0,0" Height="371" Width="400"/>
-        <TextBox x:Name="textBox" HorizontalAlignment="Left" Margin="0,73,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="400"/>
+        <TextBox x:Name="key" HorizontalAlignment="Left" Margin="0,73,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Width="400"/>
+        <TextBox x:Name="textBox" HorizontalAlignment="Left" Margin="0,168,0,0" TextWrapping="Wrap" Text="TextBox" VerticalAlignment="Top" Height="379" Width="390"/>
 
     </Grid>
 </Page>
