--- a/Cryptography/Vigenere/App.xaml
+++ b/Cryptography/Vigenere/App.xaml
@@ -2,7 +2,6 @@
     x:Class="Vigenere.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:Vigenere"
-    RequestedTheme="Light">
+    xmlns:local="using:Vigenere">
 
 </Application>
