--- a/Cryptography/Vigenere/MainPage.xaml
+++ b/Cryptography/Vigenere/MainPage.xaml
@@ -5,9 +5,14 @@
     xmlns:local="using:Vigenere"
     xmlns:d="http://schemas.microsoft.com/expression/blend/2008"
     xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006"
-    mc:Ignorable="d">
+    mc:Ignorable="d"
+    Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
 
-    <Grid Background="{ThemeResource ApplicationPageBackgroundThemeBrush}">
-
+    <Grid>
+        <TextBox x:Name="Key" Text="Key" HorizontalAlignment="Left" Margin="10,49,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="34" TextAlignment="Left" Width="380"/>
+        <TextBox x:Name="Textbox" Text="" HorizontalAlignment="Left" Margin="10,88,0,0" TextWrapping="Wrap" VerticalAlignment="Top" Height="450" Width="380"/>
+        <Button x:Name="Encode" Content="Encode" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="10,569,0,0" Height="70" Width="185"/>
+        <Button x:Name="Decode" Content="Decode" HorizontalAlignment="Left" VerticalAlignment="Bottom" Margin="200,569,0,0" Height="70" Width="190"/>
+        <TextBlock x:Name="Title" HorizontalAlignment="Center" TextWrapping="Wrap" Text="Vigenere Cipher" VerticalAlignment="Top" Height="44" Width="390" TextAlignment="Center" FontSize="30"/>
     </Grid>
 </Page>
